--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_login.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_login.html
@@ -12,8 +12,8 @@
         <div class="row">
             <div class="col-md-6">
              <div class="section-title text-left">
-                <h3>Welcome!
-                    <span>Let's get start.</span>
+                <h3><strong data-locale="Welcome!">Welcome!</strong>
+                    <span data-locale="Let's get start.">Let's get start.</span>
                 </h3>
             </div>
             <br>
@@ -22,7 +22,7 @@
                         {{ form.hidden_tag() }}
 
                         <div class="col-md-12">
-                            {{ form.username.label }}<br>
+                            <strong data-locale="Username">Username</strong><br>
                             {{ form.username(class="form-control main") }}
                              <span>{{ noneerror }}</span>
     <!--                        {% for error in form.username.errors %}-->
@@ -32,7 +32,7 @@
                         </div>
 
                         <div class="col-md-12">
-                            {{ form.password.label }}<br>
+                            <strong data-locale="Password">Password</strong><br>
                             {{ form.password(class="form-control main") }}
                              <span>{{ pwerror }}</span>
     <!--                        {% for error in form.password.errors %}-->
@@ -42,10 +42,10 @@
                         </div>
 
                         <div class="col-md-6 text-left">
-                            {{ form.remember_me() }} {{ form.remember_me.label }}
+                            {{ form.remember_me() }} <strong data-locale="Remember ME">Remember ME</strong>
                         </div>
                         <div class="col-md-6 text-right">
-                            {{ form.submit(class="btn btn-style-one") }}
+                            {{ form.submit(class="btn btn-style-one",value='登陆') }}
                         </div>
                     </form>
                 </div>
@@ -54,8 +54,8 @@
             </div>
             <div class="col-md-4">
                 <div class="section-title text-left">
-                    <h3>Don't have one?
-                        <span>Join us now!</span>
+                    <h3><strong data-locale="Don't have one?">Don't have one?</strong><br>
+                        <span data-locale="Join us now!">Join us now!</span>
                     </h3>
                 </div>
                 <!-- address start -->
@@ -63,7 +63,7 @@
                 <!-- submit button -->
                 <div class="col-md-12 text-center">
 {#                    <button class="btn btn-style-one" type="submit" href="{{ url_for('signup')}}">Register An Account</button>#}
-                    <a href="{{ url_for('signup')}}" class="btn-style-one">Register An Account</a>
+                    <a href="{{ url_for('signup')}}" class="btn-style-one" data-locale="Register An Account">Register An Account</a>
                 </div>
             </div>
         </div>
