--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_questions.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_questions.html
@@ -3,15 +3,15 @@
 {% block content %}
 <section>
     <div class="container-fluid">
-      <span><strong>Do you have any questions?</strong></span>
-      <button type="button" class="btn btn-primary btn-sm" onclick="window.location.href='{{url_for('create_questions')}}'">Ask Question.</button> 
+      <span><strong data-locale="Do you have any questions?">Do you have any questions?</strong></span>
+      <button type="button" class="btn btn-primary btn-sm" onclick="window.location.href='{{url_for('create_questions')}}'" data-locale="Ask Question">Ask Question</button>
     </div>
 <br>
     {% if unanswered_questions %}
         <div class="col-lg-12">
           <div class="articles card">
             <div class="card-header d-flex align-items-center">
-              <h2 class="h3">Unanswered Questions</h2>
+              <h2 class="h3" data-locale="Unanswered Questions">Unanswered Questions</h2>
             </div>
             <div class="card-body no-padding">
             {% for unanswered_question in unanswered_questions%}
@@ -24,14 +24,14 @@
           </div>
         </div>
     {% else %}
-    <p>No questions</p>
+    <p data-locale="No questions">No questions</p>
     {% endif %}
 
     {% if answered_questions %}
         <div class="col-lg-12">
           <div class="articles card">
             <div class="card-header d-flex align-items-center">
-              <h2 class="h3">Answered Questions</h2>
+              <h2 class="h3" data-locale="Answered Questions">Answered Questions</h2>
             </div>
             <div class="card-body no-padding">
             {% for answered_question in answered_questions%}
@@ -44,7 +44,7 @@
           </div>
         </div>
     {% else %}
-    <p>No answered_questions</p>
+    <p data-locale="No answered questions">No answered questions</p>
 </section>
     {% endif %}
 {% endblock %}
