--- a/HospitalSystem/HospitalSystem/systemapp/templates/signup.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/signup.html
@@ -8,8 +8,8 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="section-title text-left">
-                    <h3>Join Us Now!<br>
-                        <span>Please fill the form below.</span>
+                    <h3><strong data-locale="Join us now!">Join us now!</strong><br>
+                        <span data-locale="Please fill the form below.">Please fill the form below.</span>
                     </h3>
                 </div>
 
@@ -19,24 +19,24 @@
                     {{ form.hidden_tag() }}
 
                     <div class="col-md-12">
-                        {{ form.username.label }}<br>
+                        <strong data-locale="Username">Username</strong><br>
                         {{ form.username(class="form-control main") }}
                         <span style="color: red">{{ usernameerror }}</span>
                         <span id="validation_username"></span>
                     </div>
                     <div class="col-md-12">
-                        {{ form.email.label }}<br>
+                        <strong data-locale="Email">Email</strong><br>
                         {{ form.email(class="form-control main") }}
                         <span style="color: red">{{ emailerror }}</span>
                         <span id="validation_email"></span>
                     </div>
                     <div class="col-md-12">
-                        {{ form.password.label }}<br>
+                        <strong data-locale="Password">Password</strong><br>
                         {{ form.password(class="form-control main") }}
                         <span id="validation_password"></span>
                     </div>
                     <div class="col-md-12">
-                        {{ form.password2.label }}<br>
+                        <strong data-locale="Repeat Password">Repeat Password</strong><br>
                         {{ form.password2(class="form-control main") }}
                         <span id="validation_password2"></span>
                     </div>
@@ -50,8 +50,8 @@
             </div>
             <div class="col-md-4">
                 <div class="section-title text-left">
-                    <h3>Already have one!
-                        <span>Login now!</span>
+                    <h3><strong data-locale="Already have one!">Already have one!</strong>
+                        <span data-locale="Login now!">Login now!</span>
                     </h3>
                 </div>
                 <!-- address start -->
@@ -59,7 +59,7 @@
                 <!-- submit button -->
                 <div class="col-md-12 text-center">
 {#                    <button class="btn btn-style-one" type="submit" href="{{ url_for('signup')}}">Register An Account</button>#}
-                    <a href="{{ url_for('customer_login')}}" class="btn-style-one">Login My Account</a>
+                    <a href="{{ url_for('customer_login')}}" class="btn-style-one" data-locale="Login My Account">Login My Account</a>
                 </div>
             </div>
         </div>
