add edit,delete user and pet information

--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_console_base.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_console_base.html
@@ -163,7 +163,7 @@
 
                     <li class="nav-label"><strong data-locale="SETTING">SETTING</strong></li>
                     <li>
-                        <a href="#" aria-expanded="false">
+                        <a href="{{url_for('customer_profile')}}" aria-expanded="false">
                             <i class="icon-grid menu-icon"></i><span class="nav-text" data-locale="Profile">Profile</span>
                         </a>
                     </li>
