--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_mypets.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_mypets.html
@@ -22,6 +22,7 @@
                         <tr>
                             <th data-locale="Name">Name</th>
                             <th data-locale="Category">Category</th>
+                            <th > </th>
                         </tr>
                     
                         {% for pet in pets %}
@@ -32,6 +33,8 @@
                                 {% elif pet.type == 2 %}
                                 <td data-locale="Dog">Dog</td>
                                 {% endif %}
+                                <td><a class="btn btn-primary btn-sm" href="/update_pet/{{pet.id}}" role="button">Edit</a>
+                                <a class="btn btn-primary btn-sm" href="/delete_pet/{{pet.id}}" role="button">Delete</a></td>
                             </tr>
                         {% endfor%}
                         
