--- a/HospitalSystem/HospitalSystem/systemapp/templates/password_check.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/password_check.html
@@ -1,4 +1,4 @@
-{% extends"nav.html" %}
+{% extends"customer_console_base.html" %}
 
 {% block content %}
     <div class="container">
@@ -18,7 +18,7 @@
     <label>Please enter your old password:</label>
     <input type="password" name="password">
     <br><br>
-    <input type="submit" value="Submit">
+    <button type="submit" class="btn btn-outline-info">Submit</button>
 </form>
  </div>
         </div>
