--- a/HospitalSystem/HospitalSystem/systemapp/templates/update_pet.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/update_pet.html
@@ -1,22 +1,36 @@
-{% extends"nav.html" %}
+{% extends"customer_console_base.html" %}
 
 {% block content %}
     <div class="container">
         <div class="row row-centered">
             <div class="well col-md-6 col-centered">
-                    <h1 class="text-center">Please fill the form below</h1>
-<form action="/personal_information/update_pet/{{pet.id}}" method="POST">
-    <label>Name：</label>
-    <input type="text" name="name" value="{{pet.name}}">
-    <br><br>
-    <label>Type：</label>
-    <input type="text" name="type" value="{{pet.type}}">
-    <br><br>
-    <input type="submit" value="Update">
-</form>
- </div>
+                <h1 class="text-center">Please fill the form below</h1>
+                <h2 class="text-warning text-center">{{ information }}</h2>
+                <form action="" method="post" novalidate role="form" class="form-horizontal">
+                    {{ form.hidden_tag() }}
+                    <div class="form-group">
+                        {{ form.petname.label }}<br>
+                        {{ form.petname(size=32, class="form-control") }}
+                        <span style="color: red">{{ usernameerror }}</span>
+                        <span id="validation_username"></span>
+                    </div>
+                    <div class="form-group">
+                        {{ form.type.label }}
+                        {{ form.type(class="form-control") }}
+                        {% for error in form.type.errors %}
+                        <span style="color: red;">[{{ error }}]</span>
+                        {% endfor %}
+                    </div>
+                  <div>
+                        
+                    </div>
+                    <div class="form-group">
+                        {{ form.submit(class="btn btn-outline-info") }}
+                    </div>
+                </form>
+            </div>
         </div>
-        
     </div>
-
+    <script src="{{ url_for('static', filename='script/jquery.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static',filename='script/code.js') }}"></script>
 {% endblock %}
