--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_console_base.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_console_base.html
@@ -53,8 +53,8 @@
             <div class="brand-logo">
                 <a href="{{ url_for('index') }}">
                     <b class="logo-abbr"><img src="../static/images/customer_img/favicon1.png" alt=""> </b>
-                    <span class="logo-compact color-white"><strong>Healing Paws</strong> </span>
-                    <span class="brand-title  color-white"><strong> Healing Paws</strong> </span>
+                    <span class="logo-compact color-white" data-locale="Healing Paws"><strong>Healing Paws</strong> </span>
+                    <span class="brand-title  color-white"><strong data-locale="Healing Paws"> Healing Paws</strong> </span>
                 </a>
             </div>
         </div>
@@ -78,7 +78,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text bg-transparent border-0 pr-2 pr-sm-3" id="basic-addon1"><i class="mdi mdi-magnify"></i></span>
                         </div>
-                        <input type="search" class="form-control" placeholder="Search Something" aria-label="Search">
+                        <input type="search" class="form-control" aria-label="Search">
                         <div class="drop-down animated flipInX d-md-none">
                             <form action="#">
                                 <input type="text" class="form-control" placeholder="Search">
@@ -88,130 +88,18 @@
                 </div>
                 <div class="header-right">
                     <ul class="clearfix">
-                        <li class="icons dropdown"><a href="javascript:void(0)" data-toggle="dropdown">
-                                <i class="mdi mdi-email-outline"></i>
-                                <span class="badge badge-pill gradient-1">3</span>
-                            </a>
-                            <div class="drop-down animated fadeIn dropdown-menu">
-                                <div class="dropdown-content-heading d-flex justify-content-between">
-                                    <span class="">3 New Messages</span>  
-                                    <a href="javascript:void()" class="d-inline-block">
-                                        <span class="badge badge-pill gradient-1">3</span>
-                                    </a>
-                                </div>
-                                <div class="dropdown-content-body">
-                                    <ul>
-                                        <li class="notification-unread">
-                                            <a href="javascript:void()">
-                                                <img class="float-left mr-3 avatar-img" src="../static/images/customer_img/avatar/1.jpg" alt="">
-                                                <div class="notification-content">
-                                                    <div class="notification-heading">Saiful Islam</div>
-                                                    <div class="notification-timestamp">08 Hours ago</div>
-                                                    <div class="notification-text">Hi Teddy, Just wanted to let you ...</div>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li class="notification-unread">
-                                            <a href="javascript:void()">
-                                                <img class="float-left mr-3 avatar-img" src="../static/images/customer_img/avatar/2.jpg" alt="">
-                                                <div class="notification-content">
-                                                    <div class="notification-heading">Adam Smith</div>
-                                                    <div class="notification-timestamp">08 Hours ago</div>
-                                                    <div class="notification-text">Can you do me a favour?</div>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void()">
-                                                <img class="float-left mr-3 avatar-img" src="../static/images/customer_img/avatar/3.jpg" alt="">
-                                                <div class="notification-content">
-                                                    <div class="notification-heading">Barak Obama</div>
-                                                    <div class="notification-timestamp">08 Hours ago</div>
-                                                    <div class="notification-text">Hi Teddy, Just wanted to let you ...</div>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void()">
-                                                <img class="float-left mr-3 avatar-img" src="../static/images/customer_img/avatar/4.jpg" alt="">
-                                                <div class="notification-content">
-                                                    <div class="notification-heading">Hilari Clinton</div>
-                                                    <div class="notification-timestamp">08 Hours ago</div>
-                                                    <div class="notification-text">Hello</div>
-                                                </div>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                    
-                                </div>
-                            </div>
-                        </li>
-                        <li class="icons dropdown"><a href="javascript:void(0)" data-toggle="dropdown">
-                                <i class="mdi mdi-bell-outline"></i>
-                                <span class="badge badge-pill gradient-2">3</span>
-                            </a>
-                            <div class="drop-down animated fadeIn dropdown-menu dropdown-notfication">
-                                <div class="dropdown-content-heading d-flex justify-content-between">
-                                    <span class="">2 New Notifications</span>  
-                                    <a href="javascript:void()" class="d-inline-block">
-                                        <span class="badge badge-pill gradient-2">5</span>
-                                    </a>
-                                </div>
-                                <div class="dropdown-content-body">
-                                    <ul>
-                                        <li>
-                                            <a href="javascript:void()">
-                                                <span class="mr-3 avatar-icon bg-success-lighten-2"><i class="icon-present"></i></span>
-                                                <div class="notification-content">
-                                                    <h6 class="notification-heading">Events near you</h6>
-                                                    <span class="notification-text">Within next 5 days</span> 
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void()">
-                                                <span class="mr-3 avatar-icon bg-danger-lighten-2"><i class="icon-present"></i></span>
-                                                <div class="notification-content">
-                                                    <h6 class="notification-heading">Event Started</h6>
-                                                    <span class="notification-text">One hour ago</span> 
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void()">
-                                                <span class="mr-3 avatar-icon bg-success-lighten-2"><i class="icon-present"></i></span>
-                                                <div class="notification-content">
-                                                    <h6 class="notification-heading">Event Ended Successfully</h6>
-                                                    <span class="notification-text">One hour ago</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void()">
-                                                <span class="mr-3 avatar-icon bg-danger-lighten-2"><i class="icon-present"></i></span>
-                                                <div class="notification-content">
-                                                    <h6 class="notification-heading">Events to Join</h6>
-                                                    <span class="notification-text">After two days</span> 
-                                                </div>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                    
-                                </div>
-                            </div>
-                        </li>
                         <li class="icons dropdown d-none d-md-flex">
-                            <a href="javascript:void(0)" class="log-user"  data-toggle="dropdown">
-                                <span>English</span>  <i class="fa fa-angle-down f-s-14" aria-hidden="true"></i>
-                            </a>
-                            <div class="drop-down dropdown-language animated fadeIn  dropdown-menu">
-                                <div class="dropdown-content-body">
-                                    <ul>
-                                        <li><a href="javascript:void()">English</a></li>
-                                        <li><a href="javascript:void()">Chinese</a></li>
-                                    </ul>
-                                </div>
-                            </div>
+{#                            <a href="javascript:void(0)" class="log-user"  data-toggle="dropdown">#}
+{#                                <span data-locale="Change Language">Change Language</span>  <i class="fa fa-angle-down f-s-14" aria-hidden="true"></i>#}
+{#                            </a>#}
+{#                            <div class="drop-down dropdown-language animated fadeIn  dropdown-menu">#}
+{#                                <div class="dropdown-content-body">#}
+{#                                    <ul>#}
+                                        <button type="button" id='btn' class="btn btn-primary" data-locale="Change Language">Change Language</button>
+{#                                        <button id='btn' data-locale="Change Language">Change Language</button>#}
+{#                                    </ul>#}
+{#                                </div>#}
+{#                            </div>#}
                         </li>
                         <li class="icons dropdown">
                             <div class="user-img c-pointer position-relative"   data-toggle="dropdown">
@@ -230,8 +118,8 @@
 {#                                            </a>#}
 {#                                        </li>#}
 {#                                        <hr class="my-2">#}
-                                        <li><a href="{{url_for('customer_logout') }}"><i class="icon-key"></i> <span>Logout</span></a></li>
-                                        <li><a href="#"><i class="icon-lock"></i> <span>Lock Screen</span></a></li>
+                                        <li><a href="{{url_for('customer_logout') }}"><i class="icon-key"></i> <span data-locale="Logout">Logout</span></a></li>
+                                        <li><a href="#"><i class="icon-lock"></i> <span data-locale="Lock Screen">Lock Screen</span></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -252,31 +140,31 @@
                 <ul class="metismenu" id="menu">
                     <li>
                         <a href="{{url_for('customer_console_main')}}" aria-expanded="false">
-                            <i class="icon-speedometer menu-icon"></i><span class="nav-text">  Main </span>
+                            <i class="icon-speedometer menu-icon"></i><span class="nav-text" data-locale="Main">  Main </span>
                         </a>
                     </li>
 
                     <li class="nav-label"><strong>ME</strong></li>
                     <li>
                         <a href="{{url_for('customer_appointments')}}" aria-expanded="false">
-                            <i class="icon-envelope menu-icon"></i> <span class="nav-text">My Appointments</span>
+                            <i class="icon-envelope menu-icon"></i> <span class="nav-text" data-locale="My Appointments">My Appointments</span>
                         </a>
                     </li>
                     <li>
                         <a href="{{url_for('customer_my_pets')}}" aria-expanded="false">
-                            <i class="icon-screen-tablet menu-icon"></i><span class="nav-text">My Pets</span>
+                            <i class="icon-screen-tablet menu-icon"></i><span class="nav-text" data-locale="My Pets">My Pets</span>
                         </a>
                     </li>
                     <li>
                         <a href="{{url_for('customer_questions')}}" aria-expanded="false">
-                            <i class="icon-graph menu-icon"></i> <span class="nav-text">My Questions</span>
+                            <i class="icon-graph menu-icon"></i> <span class="nav-text" data-locale="My Questions">My Questions</span>
                         </a>
                     </li>
 
-                    <li class="nav-label"><strong>SETTING</strong></li>
+                    <li class="nav-label"><strong data-locale="SETTING">SETTING</strong></li>
                     <li>
                         <a href="#" aria-expanded="false">
-                            <i class="icon-grid menu-icon"></i><span class="nav-text">Profile</span>
+                            <i class="icon-grid menu-icon"></i><span class="nav-text" data-locale="Profile">Profile</span>
                         </a>
                     </li>
                     <li>
@@ -367,6 +255,7 @@
     <script src="../static/vendor/plugins/jquery/jquery.min.js"></script>
     <script src="../static/script/jquery.cookie.js"></script>
 
+    <script src="../static/script/customer_js/dashboard/dashboard-1.js"></script>
 
     <!-- I18N -->
     <script src="../static/script/i18n_js/jquery.i18n.properties.min.js"></script>
