--- a/HospitalSystem/HospitalSystem/systemapp/templates/nav.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/nav.html
@@ -29,7 +29,7 @@
 <div class="page-wrapper">
 
 <!--Header Upper-->
-<section class="header-uper">
+<section class="header-uper" id="title">
       <div class="container clearfix">
             <div class="logo">
                   <figure>
@@ -44,7 +44,7 @@
                               <div class="icon-box">
                                     <i class="fa fa-envelope-o"></i>
                               </div>
-                              <strong data-locale="Email">Email</strong>
+                              <strong data-locale="Email"></strong>
                               <br>
                               <a href="#">
                                     <span>HealingPaws@gmail.com</span>
@@ -54,13 +54,13 @@
                               <div class="icon-box">
                                     <i class="fa fa-phone"></i>
                               </div>
-                              <strong data-locale="Call Now">Call Now</strong>
+                              <strong data-locale="Call Now"></strong>
                               <br>
                               <span>+ (86) - 123 - 4567</span>
                         </li>
                   </ul>
                   <div class="link-btn">
-                        <a href="{{ url_for('customer_login')}}" class="btn-style-one" data-locale="My Account">My Account</a>
+                        <a href="{{ url_for('customer_login')}}" class="btn-style-one" data-locale="My Account"></a>
                   </div>
             </div>
       </div>
@@ -74,7 +74,7 @@
             <div class="navbar-header">
                   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
                         aria-expanded="false">
-                        <span class="sr-only" data-locale="Toggle navigation">Toggle navigation</span>
+                        <span class="sr-only" data-locale="Toggle navigation"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -84,25 +84,25 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav">
                         <li class="active">
-                              <a href="{{ url_for('index')}}" data-locale="Home">Home</a>
+                              <a href="{{ url_for('index')}}" data-locale="Home"></a>
                         </li>
                         <li>
-                              <a href="#" data-locale="News">News</a>
+                              <a href="#News" data-locale="News"></a>
                         </li>
                         <li>
-                              <a href="#" data-locale="Services">Services</a>
+                              <a href="#Services" data-locale="Services"></a>
                         </li>
                         <li>
-                              <a href="#" data-locale="Gallery">Gallery</a>
+                              <a href="#FAQ" data-locale="FAQ"></a>
                         </li>
                         <li>
-                              <a href="#" data-locale="Blog">Blog</a>
+                              <a href="#Blog" data-locale="Blog"></a>
                         </li>
                         <li>
-                              <a href="#" data-locale="Contact">Contact</a>
+                              <a href="#Contact" data-locale="Contact"></a>
                         </li>
-                        <li>
-                              <a href="#" id='btn' class="btn-style-special"  data-locale="Change Language">Change to Chinese</a>
+                        <li class="text-left">
+                              <a href="#title" id='btn' class="btn-style-special"  data-locale="Change Language"></a>
 {#                              <button type="button" id='btn' class="btn-style-one" data-locale="Change Language"></button>#}
                         </li>
                   </ul>
@@ -130,11 +130,11 @@
                 </a>
               </figure>
             </div>
-            <p><strong data-locale="footer1">Healing Paws Veterinary Hospital - Your One-Call-Away Pet Butler</strong></p>
+            <p><strong data-locale="footer1"></strong></p>
             <ul class="location-link">
               <li class="item">
                 <i class="fa fa-map-marker"></i>
-                <p data-locale="footer2">Beijing, Shanghai, Hangzhou</p>
+                <p data-locale="footer2"></p>
               </li>
               <li class="item">
                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
@@ -158,7 +158,7 @@
 
         <div class="col-md-4 col-sm-6 col-xs-12">
           <div class="social-links">
-            <h6 data-locale="footer3">Recent Posts</h6>
+            <h6 data-locale="footer3"></h6>
             <ul>
               <li class="item">
                 <div class="media">
@@ -168,7 +168,7 @@
                     </a>
                   </div>
                   <div class="media-body">
-                    <h4 class="media-heading"><a href="#" data-locale="footer4">Post Title</a></h4>
+                    <h4 class="media-heading"><a href="#" data-locale="footer4"></a></h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, dolorem.</p>
                   </div>
                 </div>
@@ -182,7 +182,7 @@
                   </div>
                   <div class="media-body">
                     <h4 class="media-heading">
-                      <a href="#" data-locale="footer4">Post Title</a>
+                      <a href="#" data-locale="footer4"></a>
                     </h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, dolorem.</p>
                   </div>
@@ -197,19 +197,19 @@
   <div class="footer-bottom">
     <div class="container clearfix">
       <div class="copyright-text">
-        <p>&copy; Copyright 2020. All Rights Reserved by
-          <a href="index.html">Healing Paws Veterinary Hospital</a>
+        <p>&copy; <strong data-locale="Copyright"> Copyright 2020. All Rights Reserved by</strong>
+          <a href="index.html" data-locale="Healing Paws Veterinary Hospital">Healing Paws Veterinary Hospital</a>
         </p>
       </div>
       <ul class="footer-bottom-link">
         <li>
-          <a href="#" data-locale="Home">Home</a>
+          <a href="#title" data-locale="Home"></a>
         </li>
         <li>
-          <a href="#" data-locale="About Us">About Us</a>
+          <a href="#title" data-locale="About Us"></a>
         </li>
         <li>
-          <a href="#" data-locale="Contact Us">Contact Us</a>
+          <a href="#title" data-locale="Contact Us"></a>
         </li>
       </ul>
     </div>
