--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_console_base.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_console_base.html
@@ -214,7 +214,9 @@
         ***********************************-->
         <div class="footer">
             <div class="copyright">
-                <p>Copyright &copy; Designed & Developed by <a href="https://themeforest.net/user/quixlab">Quixlab</a> 2018</p>
+                <p>&copy; <strong data-locale="Copyright"> Copyright 2020. All Rights Reserved by</strong>
+                    <a href="index.html" data-locale="Healing Paws Veterinary Hospital">Healing Paws Veterinary Hospital</a>
+                </p>
             </div>
         </div>
         <!--**********************************
