--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_appointments.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_appointments.html
@@ -68,8 +68,8 @@
                                     <td>{{a.description}}</td>
                                     <td>{{ a.pet_status }}</td>
                                     <td>{{a.operator_id}}</td>
-                                    <td><a class="btn btn-primary btn-sm" href="/customer_appointments/update_appointments/{{a.id}}" role="button" data-locale="Edit">Edit</a>
-                                        <a class="btn btn-primary btn-sm" href="/customer_appointments/delete_appointment/{{a.id}}" role="button" data-locale="Delete">Delete</a></td>
+                                    <td><a class="btn btn-primary btn-sm" href="/update_appointments/{{a.id}}" role="button" data-locale="Edit">Edit</a>
+                                        <a class="btn btn-primary btn-sm" href="/delete_appointment/{{a.id}}" role="button" data-locale="Delete">Delete</a></td>
                                     </td>
 
                                 </tr>
