--- a/HospitalSystem/HospitalSystem/systemapp/templates/delete_appointment.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/delete_appointment.html
@@ -1,11 +1,11 @@
-{% extends"nav.html" %}
+{% extends"customer_console_base.html" %}
 
 {% block content %}
     <div class="container">
         <div class="row row-centered">
             <div class="well col-md-6 col-centered">
 
-<form action="/customer_appointments/delete_appointment/{{appointment.id}}" method="POST">
+<form action="/delete_appointment/{{appointment.id}}" method="POST">
 
     <input type="submit" value="Delete">
 </form>
