fixed translation bug on customer_main

--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_login.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_login.html
@@ -45,7 +45,8 @@
                             {{ form.remember_me() }} <strong data-locale="Remember ME">Remember ME</strong>
                         </div>
                         <div class="col-md-6 text-right">
-                            {{ form.submit(class="btn btn-style-one",value='登陆') }}
+{#                            {{ form.submit(class="btn btn-style-one",value='登陆') }}#}
+                            {{ form.submit(class="btn btn-style-one") }}
                         </div>
                     </form>
                 </div>
