--- a/HospitalSystem/HospitalSystem/systemapp/templates/staff_base.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/staff_base.html
@@ -63,7 +63,7 @@
             <div class="form-group">
             <input type="text" class="form-control" placeholder="Search with id or name" id="search">
             </div>
-            <button type="submit" class="btn btn-default" id="searchsubmit">Submit</button>
+            <a id="searchlink"><button type="submit" class="btn btn-default" id="searchsubmit">Submit</button></a>
         </form>
         </div>
         </div>
